tests/cases/fail/module_private_class_access_models.p4
class _Point:
    x: int
    y: int
